# algo-trading-platform

./: .gitignore  2025_algo_case_packet.tex  README.md  pyproject.toml
.github/workflows/: test.yml
case packet/: PortfolioStrategy.py  training.json
raw_data/: README.txt
raw_data/daily_market_data/: 300750_SHZ.json  ADANIENT_BSE.json  AMZN.json  BYDDY.json  COST.json  DAL.json  DKNG.json  FLR.json  GOOG.json  GS.json  HEI.json  HTHIY.json  JPM.json  MC_PA.json  META.json  NEE.json  NTDOY.json  NVDA.json  PHYS.json  PLTR.json  RELIANCE_BSE.json  TCEHY.json  V.json  VIRT.json  WM.json  XOM.json
src/bot_strategies/: 4o.py  R1.py  claude.py  deep_research.py  deep_research_wTestingSet.py  gemini_flash.py  o3_mini.py
src/data_processor/: format_market_data.py  get_market_data.py
src/strategy_evaluator/: grader.py  portfolio_evaluator.py  requirements.txt  run_autograder  run_tests.py  setup.sh
src/strategy_evaluator/data/: testing.json
tests/data_processor/: test_format_market_data.py  test_get_market_data.py
tests/strategy_evaluator/: test_grader.py  test_portfolio_evaluator.py
